--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <img class="logo" src="assets/Library.svg" alt="">
         <ul class="nav__links">
           <li><a href="https://williamgrube1.github.io/OnlineLibraryStore/" class="nav__link">Home</a></li>
-          <li><a href="https://williamgrube1.github.io/OnlineLibraryStore/" class="nav__link">Contact</a></li>
-          <li><a href="/index.html" class="nav__link nav__link--primary">Books</a></li>
+          <li><a href="https://williamgrube1.github.io/" target="_blank" class="nav__link">Contact</a></li>
+          <li><a href="#" class="nav__link nav__link--primary">Books</a></li>
         </ul>
         <button class="btn__menu" onclick="openMenu()">
           <i class="fas fa-bars"></i>
@@ -78,9 +78,9 @@
         </a>
         <div class="footer__list">
           <a href="https://williamgrube1.github.io/OnlineLibraryStore/" class="footer__link">Home</a>
-          <a href="https://williamgrube1.github.io/OnlineLibraryStore/" class="footer__link no-cursor">About</a>
+          <a class="footer__link no-cursor">About</a>
           <a href="/index.html" class="footer__link">Books</a>
-          <a href="https://williamgrube1.github.io/OnlineLibraryStore/" class="footer__link no-cursor">Contact</a>
+          <a class="footer__link no-cursor">Contact</a>
         </div>
         <div class="footer__copyright">Copyright &copy; 2021 Library</div>
       </div>
