--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="footer__list">
           <a href="https://williamgrube1.github.io/OnlineLibraryStore/" class="footer__link">Home</a>
           <a class="footer__link no-cursor">About</a>
-          <a href="/index.html" class="footer__link">Books</a>
+          <a href="#" class="footer__link">Books</a>
           <a class="footer__link no-cursor">Contact</a>
         </div>
         <div class="footer__copyright">Copyright &copy; 2021 Library</div>
