--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
           </button>
           <ul class="menu__links">
             <li class="menu__list">
-              <a href="#" class="menu__link" onclick="closeMenu()">Home</a>
+              <a href="https://williamgrube1.github.io/OnlineLibraryStore/" class="menu__link" onclick="closeMenu()">Home</a>
             </li>
             <li class="menu__list">
-              <a href="#features" class="menu__link" onclick="closeMenu()">Books</a>
+              <a href="#" class="menu__link" onclick="closeMenu()">Books</a>
             </li>
             <li class="menu__list">
-              <a class="menu__link no-cursor" onclick="closeMenu()">Contacts</a>
+              <a class="menu__link no-cursor" href="https://williamgrube1.github.io/" onclick="closeMenu()">Contact</a>
             </li>
           </ul>
         </div>
